changed kinections link, and fixed mobile cover spacing

--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -104,7 +104,7 @@
 		-webkit-box-direction: normal;
 		    -ms-flex-direction: column;
 		        flex-direction: column;
-		top: 50px;
+		top: 30px;
 		display: -webkit-box;
 		display: -ms-flexbox;
 		display: flex;
@@ -160,7 +160,7 @@
 
 	.enterSite {
 		position: fixed;
-		bottom: 50px;
+		bottom: 30px;
 		left: 50%;
 		background-color: rgba(0,0,0,.2);
 		width: 100px;
